# lab_resit

./: .gitignore  CMakeLists.txt  ModelPart.h  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.h.autosave  mainwindow.ui  mainwindow.ui.autosave  optiondialog.h  resources.qrc  vtkwidget.cpp  vtkwidget.h
QT UI files/: mainwindow.ui  optiondialog.ui
include/: ModelPart.h  ModelPartList.h  mainwindow.h  mainwindow.h.autosave
src/: ModelPart.cpp  mainwindow.cpp  optiondialog.cpp
